; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_font.c_ft_realloc.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_font.c_ft_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_4__*, i64, i64, i8*)* @ft_realloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ft_realloc(%struct.TYPE_4__* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to i32*
  store i32* %15, i32** %10, align 8
  store i8* null, i8** %11, align 8
  %16 = load i64, i64* %8, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %4
  %19 = load i32*, i32** %10, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @fz_free(i32* %19, i8* %20)
  %22 = load i8*, i8** %11, align 8
  store i8* %22, i8** %5, align 8
  br label %35

23:                                               ; preds = %4
  %24 = load i8*, i8** %9, align 8
  %25 = icmp eq i8* %24, null
  br i1 %25, label %26, label %30

26:                                               ; preds = %23
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %28 = load i64, i64* %8, align 8
  %29 = call i8* @ft_alloc(%struct.TYPE_4__* %27, i64 %28)
  store i8* %29, i8** %5, align 8
  br label %35

30:                                               ; preds = %23
  %31 = load i32*, i32** %10, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = load i64, i64* %8, align 8
  %34 = call i8* @fz_realloc_no_throw(i32* %31, i8* %32, i64 %33)
  store i8* %34, i8** %5, align 8
  br label %35

35:                                               ; preds = %30, %26, %18
  %36 = load i8*, i8** %5, align 8
  ret i8* %36
}

declare dso_local i32 @fz_free(i32*, i8*) #1

declare dso_local i8* @ft_alloc(%struct.TYPE_4__*, i64) #1

declare dso_local i8* @fz_realloc_no_throw(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
